(executable
 (package dkml-component-offline-ocamlrun)
 (name install)
 (public_name offline_ocamlrun_install)
 (modes
  (byte exe))
 (libraries bos diskuvbox))

(install
 (package dkml-component-offline-ocamlrun)
 (section share)
 (files
  (install.bc as staging-files/generic/install.bc)))

(rule
 (target dlls.txt.corrected)
 (deps
  (:bc install.bc))
 (action
  (progn
   (with-stdout-to
    %{target}.info
    (run ocamlobjinfo %{bc}))
   (with-stdout-to
    %{target}
    (run awk "/.*:/ {x=0} /Used DLLs:/{x=1} x==1 {print}" %{target}.info)))))

(rule
 (alias runtest)
 (package dkml-component-offline-ocamlrun)
 (enabled_if (< %{ocaml_version} 5.1.0))
 (action
   (diff dlls_pre51.txt dlls.txt.corrected)))

(rule
 (alias runtest)
 (package dkml-component-offline-ocamlrun)
 (enabled_if (>= %{ocaml_version} 5.1.0))
 (action
   (diff dlls_51.txt dlls.txt.corrected)))
